kubernetes/development/rest-service/rest-service2/service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: service-2
  annotations:
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8081"
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: http-2
    port: 8081
    targetPort: 8081
  selector:
    app: deploy-2
