kubernetes/development/rest-service/rest-service2/destination-rule-2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-2
spec:
  host: service-2.poc.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    # connectionPool:
    #   http:
    #     http1MaxPendingRequests: 1
    #     maxRequestsPerConnection: 1
    #   tcp:
    #     maxConnections: 1
    # outlierDetection:
    #   baseEjectionTime: 180.000s
    #   consecutiveErrors: 1
    #   interval: 1.000s
    #   maxEjectionPercent: 100
